kuber/dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ku
  labels:
    app: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      labels:
        app: dev
    spec:
      containers:
        - name: demo
          image: bobah165/arch:v1
          ports:
            - containerPort: 8000
