kuber/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  type: NodePort
  selector:
    app: dev
  ports:
      - port: 80
        targetPort: 8000
