kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "arch.homework"
      http:
        paths:
          - pathType: Prefix
            path: "/health"
            backend:
              service:
                name: demo-service
                port:
                  number: 80
