kuber/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress-redirect
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
    - host: "arch.homework"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /otusapp/(.*)/(.*)
            backend:
              service:
                name: demo-service
                port:
                  number: 80
